# linux-job-runner

./: .gitignore  Cargo.toml  Design.md  README.md  gen-certs.sh  git-hooks.sh
client/: Cargo.toml
client/src/: error.rs  lib.rs
common/: Cargo.toml  build.rs
common/proto/: common.proto
common/src/: job_id.rs  lib.rs
common/tests/: concurrent.rs  e2e.rs  e2e_cli.rs  permissions.rs
common/tests/helpers/: mod.rs
common/tests/scripts/: slow-output.sh
gen-cert-conf/: client1.conf  client2.conf  server.conf
server/: Cargo.toml
server/src/: client_cert.rs  job.rs  main.rs  output_stream.rs  service.rs
server/src/output_stream/: handler.rs  mod.rs  sync.rs
